--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -9,7 +9,15 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<canvas id="myCanvas" width="1000" height="900" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);"></canvas>
+		<canvas id="myCanvas" width="1000" height="900" style="rgba(0, 0, 0, 0.2);"></canvas>
+    <div style="border: 20px rgba(0, 0, 0, 0.2)">
+		<button id="randomButton" onclick="randomNButtonClick(1)" style="border: 20px">Random</button>
+		<button id="random10Button" onclick="randomNButtonClick(10)" style="border: 20px">Random 10</button>
+		<button id="random100Button" onclick="randomNButtonClick(100)" style="border: 20px">Random 100</button>
+		<button id="random1000Button" onclick="randomNButtonClick(1000)" style="border: 20px">Random 1000</button>
+		<button id="random10000Button" onclick="randomNButtonClick(10000)" style="border: 20px">Random 10,000</button>
+		<button id="random100000Button" onclick="randomNButtonClick(100000)" style="border: 20px">Random 100,000</button>
+		</div>
 		<script src="game.js"></script>
 	</body>
 </html>
