--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<canvas id="myCanvas" width="1000" height="900" style="rgba(0, 0, 0, 0.2);"></canvas>
     <div style="border: 20px rgba(0, 0, 0, 0.2)">
+		<button id="greedyButton" onclick="greedyButtonClick()" style="border: 20px">Greedy</button>
 		<button id="randomButton" onclick="randomNButtonClick(1)" style="border: 20px">Random</button>
 		<button id="random10Button" onclick="randomNButtonClick(10)" style="border: 20px">Random 10</button>
 		<button id="random100Button" onclick="randomNButtonClick(100)" style="border: 20px">Random 100</button>
