--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -9,9 +9,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<canvas id="myCanvas" width="1000" height="900" style="rgba(0, 0, 0, 0.2);"></canvas>
+		<canvas id="myCanvas" width="1100" height="900" style="rgba(0, 0, 0, 0.2);"></canvas>
     <div style="border: 20px rgba(0, 0, 0, 0.2)">
 		<button id="greedyButton" onclick="greedyButtonClick()" style="border: 20px">Greedy</button>
+		<button id="mcmcButton" onclick="mcmcButtonClick()" style="border: 20px">MCMC</button>
 		<button id="randomButton" onclick="randomNButtonClick(1)" style="border: 20px">Random</button>
 		<button id="random10Button" onclick="randomNButtonClick(10)" style="border: 20px">Random 10</button>
 		<button id="random100Button" onclick="randomNButtonClick(100)" style="border: 20px">Random 100</button>
