--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -13,13 +13,9 @@
     <div style="border: 20px rgba(0, 0, 0, 0.2)">
 		<button id="greedyButton" onclick="greedyButtonClick()" style="border: 20px">Greedy</button>
 		<button id="mcmcButton" onclick="mcmcButtonClick()" style="border: 20px">MCMC</button>
-		<button id="randomButton" onclick="randomNButtonClick(1)" style="border: 20px">Random</button>
-		<button id="random10Button" onclick="randomNButtonClick(10)" style="border: 20px">Random 10</button>
 		<button id="random100Button" onclick="randomNButtonClick(100)" style="border: 20px">Random 100</button>
-		<button id="random1000Button" onclick="randomNButtonClick(1000)" style="border: 20px">Random 1000</button>
-		<button id="random10000Button" onclick="randomNButtonClick(10000)" style="border: 20px">Random 10,000</button>
-		<button id="random100000Button" onclick="randomNButtonClick(100000)" style="border: 20px">Random 100,000</button>
+		<button id="bookButton" onclick="bookButtonClick()" style="border: 20px">Book</button>
 		</div>
-		<script src="game.js"></script>
+		<script type="module" src="game.js"></script>
 	</body>
 </html>
