--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>
 			Seaweed
 		</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<canvas id="myCanvas" width="1200" height="900" style="rgba(0, 0, 0, 0.2);"></canvas>
+		<canvas id="myCanvas"></canvas>
         <div class="status-panel">
             <div class="status-item">
                 <button id="prevButton" onclick="prevPuzzle()">←</button>
