--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -17,7 +17,7 @@
 				<div class="status-panel">
 					<div class="status-item">
 						<button id="prevButton" onclick="prevPuzzle()">←</button>
-						Puzzle <span id="puzzleCount">1/1</span>
+						Puzzle (2) <span id="puzzleCount">1/1</span>
 						<button id="nextButton" onclick="nextPuzzle()">→</button>
 						<br><br>
 						Fish <span id="fishCount" class="count-normal">0</span>/<span id="targetCount" class="count-target">0</span>
