--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="controls-container">
 				<button id="prevButton" onclick="prevPuzzle()">←</button>
-				Puzzle4 <span id="puzzleCount">1/1</span>
+				Puzzle <span id="puzzleCount">1/1</span>
 				<button id="nextButton" onclick="nextPuzzle()">→</button>
 				<br><br>
 				Fish <span id="fishCount" class="count-normal">0</span>/<span id="targetCount" class="count-target">0</span>
