added perfect message

--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -18,7 +18,7 @@
 				PUZZLE <span id="puzzleCount">1&nbsp/&nbsp1</span>
 				<button id="nextButton" onclick="nextPuzzle()">→</button>
 				<br><br>
-				FISH
+				<span class="fish-label">FISH</span>
 				<span class="fish-counter">
 					<span id="fishCount" class="count-normal">
 						0
