--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -17,6 +17,7 @@
 				<button id="prevButton" onclick="prevPuzzle()">←</button>
 				PUZZLE <span id="puzzleCount">1&nbsp/&nbsp1</span>
 				<button id="nextButton" onclick="nextPuzzle()">→</button>
+				<button id="resetButton" onclick="resetPuzzle()">RESET</button>
 				<br><br>
 				<span class="fish-label">FISH</span>
 				<span class="fish-counter">
