--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -15,9 +15,9 @@
 			</div>
 			<div class="controls-container">
 				<button id="prevButton" onclick="prevPuzzle()">←</button>
-				PUZZLE <span id="puzzleCount">1&nbsp/&nbsp1</span>
 				<button id="nextButton" onclick="nextPuzzle()">→</button>
-				<button id="resetButton" onclick="resetPuzzle()">RESET</button>
+				PUZZLE <span id="puzzleCount">1&nbsp/&nbsp1</span>
+				<button id="resetButton" onclick="resetPuzzle()">R</button>
 				<br><br>
 				<span class="fish-label">FISH</span>
 				<span class="fish-counter">
