Remove fish counter

--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -19,16 +19,7 @@
 				PUZZLE <span id="puzzleCount">1&nbsp/&nbsp1</span>
 				<button id="resetButton" onclick="resetPuzzle()">R</button>
 				<br><br>
-				<span class="fish-label">FISH</span>
-				<span class="fish-counter">
-					<span id="fishCount" class="count-normal">
-						0
-					</span>
-				</span>
-				<span class="fish-counter-separator">
-					/
-				</span>
-				<span id="targetCount" class="count-target">
+				<span id="targetCount" class="count-target" style="display: none;">
 					0
 				</span>
 				<br><br>
