--- a/rohan/seaweed/index.html
+++ b/rohan/seaweed/index.html
@@ -35,6 +35,7 @@
 				</div>
 			</div>
 		</div>
+		<script type="module" src="background.js"></script>
 		<script type="module" src="game.js"></script>
 	</body>
 </html>
