--- a/siddhartha/jungle/tests.html
+++ b/siddhartha/jungle/tests.html
@@ -9,6 +9,7 @@
     <link href="tests_theme.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Test runner page for Animal Chess game - loads all necessary game modules and test suites -->
     <div id="testResults"></div>
     <script src="board_constants.js"></script>
     <script src="ui_constants.js"></script>
