--- a/rahul/fish.html
+++ b/rahul/fish.html
@@ -77,7 +77,7 @@
             <!-- Little sparkles -->
             <text x="140" y="50" font-size="12" fill="#FFB6C1">✨</text>
         </svg>
-        <p style="color: #FF69B4; margin-top: 20px;">Swimming happily for you, 오빠! 🥰</p>
+        <p style="color: #FF69B4; margin-top: 20px;">Swimming happily for you 🥰</p>
     </div>
 </body>
 </html>
