--- a/rahul/sort/index.html
+++ b/rahul/sort/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dada's Item Lister</title>
+    <title>sort</title>
     <style>
         :root {
             /* We define our color "nicknames" here! */
