--- a/sid/ecostress/index.html
+++ b/sid/ecostress/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thermal Data Viewer</title>
+    <title>Visualizing California's 2024 Environmental Events with ECOSTRESS Data</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,7 +16,7 @@
     <div id="map"></div>
     
     <div class="controls" style="display: none;" id="controls">
-        <h3>🌡️ CA Environmental Event Viewer</h3>
+        <h3>Visualizing California's 2024 Environmental Events with ECOSTRESS Data</h3>
         
         <div style="margin-bottom: 15px; text-align: left;">
             <strong>Select an Event:</strong><br>
@@ -43,8 +43,14 @@
         <div><strong>Temperature (°F)</strong></div>
         <div class="colorbar-gradient"></div>
         <div class="colorbar-labels">
-            <span id="temp-min">--</span>
-            <span id="temp-max">--</span>
+            <span>40</span>
+            <span>50</span>
+            <span>60</span>
+            <span>70</span>
+            <span>80</span>
+            <span>90</span>
+            <span>100</span>
+            <span>110</span>
         </div>
     </div>
 
