biswas arabic fix

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="description" content="Personal family page for the Biswas family members">
+    <meta name="keywords" content="family, personal page, directory">
     <title>Biswas</title>
     <style>
         body {
@@ -17,7 +20,6 @@
             margin-bottom: 2rem;
             color: #333;
         }
-
         .grid-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -27,7 +29,7 @@
         a {
             display: block;
             text-align: center;
-            text-decoration: none; /* This removes the underline from our text */
+            text-decoration: none;
         }
         
         img {
@@ -40,7 +42,6 @@
         img:hover {
             transform: scale(1.05);
         }
-
         .grid-container h3 {
             margin-top: 0.75rem;
             color: #333;
