--- a/sid/index.html
+++ b/sid/index.html
@@ -52,7 +52,7 @@
 <body>
     <h1>Sid's Projects</h1>
     <div class="grid-container">
-        <a href="poster_website_compressed.pdf">
+        <a href="ecostress/">
             <img src="ecostress.png" alt="Ecostress Project">
         </a>
         <a href="jungle/">
