--- a/sid/index.html
+++ b/sid/index.html
@@ -55,8 +55,8 @@
         <a href="ecostress/">
             <img src="ecostress.png" alt="Ecostress Project">
         </a>
-        <a href="jungle/">
-            <img src="jungle.png" alt="Jungle Project">
+        <a href="doushouqi/">
+            <img src="doushouqi.png" alt="Dou Shou Qi Project">
         </a>
         <a href="mancala/">
             <img src="mancala.png" alt="Mancala Project">
