--- a/sid/doushouqi/index.html
+++ b/sid/doushouqi/index.html
@@ -22,6 +22,7 @@
 <script src="game_board_renderer.js"></script>
 <script src="game_board_container.js"></script>
 <script src="victory_screen.js"></script>
+<script src="rules_modal.js"></script>
 <script src="game_manager.js"></script>
 <script src="position_evaluator.js"></script>
 <script src="minimax_engine.js"></script>
